tests/NormalTests/paczka1/small_fuzzy/86310526.err
Error in line 8: KnMtr8 S146 54,75
Error in line 9: 0cHNi55 S146 54,24
